--- a/less/less教程.html
+++ b/less/less教程.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0,user-scalable=no,minimal-ui">
+    <meta name="viewport"
+          content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0,user-scalable=no,minimal-ui">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta content="yes" name="apple-mobile-web-app-capable">
     <meta content="black" name="apple-mobile-web-app-status-bar-style">
@@ -23,10 +24,12 @@
     <link rel="stylesheet" href="../common/css/font-awesome.css">
     <link rel="stylesheet" href="../common/css/bootsnav.css">
     <script src="../common/js/jquery-2.0.3.js"></script>
+    <script src="../common/js/clipboard.js"></script>
     <script src="../common/js/bootstrap.js"></script>
     <script src="../common/js/bootsnav.js"></script>
     <!--注意必须指明rel="stylesheet/less" type="text/css"-->
     <link rel="stylesheet/less" href="css/base.less">
+    <link rel="stylesheet" href="css/menu.css">
     <link rel="stylesheet/less" href="css/变量计算.less">
     <link rel="stylesheet/less" href="css/嵌套规则.less">
     <link rel="stylesheet/less" href="css/转义.less">
@@ -34,103 +37,47 @@
     <link rel="stylesheet/less" href="css/变量范围.less">
     <link rel="stylesheet/less" href="css/导入.less">
     <link rel="stylesheet/less" href="css/扩展.less">
+    <link rel="stylesheet/less" href="css/Mixins函数.less">
 
     <style rel="stylesheet/less" type="text/css">
-        .container{
-            width:100%;
-            height:auto;
-            position: fixed;
-            top:0px;
-            left: 0px;
-        }
-        nav.navbar.bootsnav{
-            border: none;
-        }
 
-        nav.navbar.bootsnav .navbar-header{
-            float:right;
-        }
-
-       /* .navbar-nav{
-            float: left;
-        }*/
-        nav.navbar.bootsnav ul.nav > li > a{
-            color: #474747;
-            text-transform: uppercase;
-            padding: 30px;
-        }
-        nav.navbar.bootsnav ul.nav > li:hover{
-            background: #f4f4f4;
-        }
-        .nav > li:after{
-            content: "";
-            width: 0;
-            height: 5px;
-            background: #34c9dd;
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            transition: all 0.5s ease 0s;
-        }
-        .nav > li:hover:after{
-            width: 100%;
-        }
-
-        nav.navbar.bootsnav ul.nav > li > a{
-            padding: 15px;
-            font-weight: 600;
-        }
-
-        /*nav.navbar.bootsnav ul.nav > li.dropdown > a.dropdown-toggle:after{
-            content: "+";
-            font-family: 'FontAwesome';
-            font-size: 16px;
-            font-weight: 500;
-            position: absolute;
-            top: 27%;
-            right: 5%;
-            transition: all 0.4s ease 0s;
-        }
-        nav.navbar.bootsnav ul.nav > li.dropdown.on > a.dropdown-toggle:after{
-            content: "\f105";
-            transform: rotate(90deg);
-        }*/
-        .dropdown-menu.multi-dropdown{
-            position: absolute;
-            left: -100% !important;
-        }
-        nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-            border: none;
-        }
-        @media only screen and (max-width:990px){
-            nav.navbar.bootsnav ul.nav > li.dropdown > a.dropdown-toggle:after,
-            nav.navbar.bootsnav ul.nav > li.dropdown.on > a.dropdown-toggle:after{ content: " "; }
-            .dropdown-menu.multi-dropdown{ left: 0 !important; }
-            nav.navbar.bootsnav ul.nav > li:hover{ background: transparent; }
-            nav.navbar.bootsnav ul.nav > li > a{ margin: 0; }
-        }
-        @media (max-width: 992px) {
-            nav.navbar.bootsnav {
-                width: 50px;
-                height: 50px;
-                margin-right: 20px;
-                float: right;
-                margin-top: 10px;
-            }
-        }
     </style>
     <script type="text/javascript">
-/*        less = {
-            env: "development",
-            async: false,
-            fileAsync: false,
-            poll: 1000,
-            functions: {},
-            dumpLineNumbers: "comments",
-            relativeUrls: false,
-            rootpath: ""
-        };*/
+        /*        less = {
+                    env: "development",
+                    async: false,
+                    fileAsync: false,
+                    poll: 1000,
+                    functions: {},
+                    dumpLineNumbers: "comments",
+                    relativeUrls: false,
+                    rootpath: ""
+                };*/
+
+        $(function () {
+
+            //添加复制按钮
+            $(' <a class=\"code-copy\" title=\"复制到剪切板\"><i class=\"fa fa-copy\"></i></a>').insertBefore("code")
+
+
+            /***** 复制按钮 开始*******/
+            var clipboardSnippets = new Clipboard('.code-copy', {
+                'text': function (trigger) {
+                    console.log($(trigger).parents("pre").children("code").html())
+                    var code = $(trigger).parents("pre").children("code").html();
+                    return code;
+                }
+
+            });
+            clipboardSnippets.on('success', function (e) {
+                e.clearSelection();
+                alert("复制成功")
+            });
+            clipboardSnippets.on('error', function (e) {
+                alert("复制失败");
+
+            });
+        });
     </script>
     <script src="js/less.js"></script>
 
@@ -152,22 +99,33 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Less语法</a>
                             <ul class="dropdown-menu">
-                                <li><a href="#变量计算" >变量计算</a></li>
-                                <li><a href="#嵌套规则" >嵌套规则</a></li>
+                                <li><a href="#变量计算">变量计算</a></li>
+                                <li><a href="#嵌套规则">嵌套规则</a></li>
                                 <li><a href="#Less转义~">Less 转义 ~</a></li>
-                                <li><a href="#Less命名空间和访问器" >Less 命名空间和访问器</a></li>
-                                <li><a href="#Less变量范围" >Less 变量范围</a></li>
-                                <li><a href="#Less注释" >Less 注释</a></li>
-                                <li><a href="#Less导入" >Less 导入</a></li>
-                                <li><a href="#Less变量" >Less 变量</a></li>
-                                <li><a href="#Less扩展" >Less 扩展</a></li>
+                                <li><a href="#Less命名空间和访问器">Less 命名空间和访问器</a></li>
+                                <li><a href="#Less变量范围">Less 变量范围</a></li>
+                                <li><a href="#Less注释">Less 注释</a></li>
+                                <li><a href="#Less导入">Less 导入</a></li>
+                                <li><a href="#Less变量">Less 变量</a></li>
+                                <li><a href="#Less扩展">Less 扩展</a></li>
                                 <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" >A</a>
+                                    <a href="#LessMixins函数" class="dropdown-toggle" data-toggle="dropdown">Less
+                                        Mixins函数</a>
+                                    <ul class="dropdown-menu">
+                                        <li><a href="#Mixin范围">Mixin范围</a></li>
+                                        <li><a href="#Mixin返回值"> Mixin返回值</a></li>
+                                        <li><a href="#mixin定义在另一个mixin">mixin定义在另一个mixin</a></li>
+                                        <li><a href="#定义和调用范围可见性">定义和调用范围可见性</a></li>
+                                    </ul>
+
+                                </li>
+                                <li class="dropdown">
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">A</a>
                                     <ul class="dropdown-menu">
                                         <li><a href="#">B</a></li>
                                         <li><a href="#">B</a></li>
                                         <li class="dropdown">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" >B</a>
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">B</a>
                                             <ul class="dropdown-menu multi-dropdown">
                                                 <li><a href="#">C</a></li>
                                                 <li><a href="#">C</a></li>
@@ -196,8 +154,9 @@
     http://www.bootcss.com/p/lesscss/#-variables<br/>
     本文访问地址：https://chentong106140.github.io/ES6/less/less%E6%95%99%E7%A8%8B.html
 </p>
-<h2><a href="#变量计算" name="变量计算" >变量计算</a></h2>
+<h2><a href="#变量计算" name="变量计算">变量计算</a></h2>
 <pre>
+    <code>
 /*编译之前*/
 @nice-blue:#f938ab;
 @light-blue:@nice-blue + #333;
@@ -210,14 +169,16 @@
 .box-1 .box-item {
   background-color: #ff6bde;
 }
+        </code>
 </pre>
 <div class="box box-1">
     <div class="box-item">
         <span>demo1</span>
     </div>
 </div>
-<h2><a href="#嵌套规则" name="嵌套规则" >嵌套规则</a></h2>
+<h2><a href="#嵌套规则" name="嵌套规则">嵌套规则</a></h2>
 <pre>
+    <code>
 /*编译之前*/
 .box-2 {
   flex-direction: row;
@@ -249,18 +210,19 @@
   line-height: 200px;
 }
 
-
+</code>
 </pre>
 <div class="box box-2">
     <div class="box-item">
         <span>demo2</span>
     </div>
 </div>
-<h2><a href="#Less转义~" name="Less转义~" >Less 转义 ~</a></h2>
+<h2><a href="#Less转义~" name="Less转义~">Less 转义 ~</a></h2>
 <p>
     通过~转义，能够将字符串，转换为css属性，~后面的必须是字符串
 </p>
 <pre>
+    <code>
 /*编译之前*/
 .box-3 {
   flex-direction: row;
@@ -278,17 +240,19 @@
 .box-3 .box-item {
   background-color: red;
 }
+        </code>
 </pre>
 <div class="box box-3">
     <div class="box-item">
         <span>demo3</span>
     </div>
 </div>
-<h2><a href="#Less命名空间和访问器" name="Less命名空间和访问器" >Less 命名空间和访问器</a></h2>
+<h2><a href="#Less命名空间和访问器" name="Less命名空间和访问器">Less 命名空间和访问器</a></h2>
 <p>
     可以将样式进行封装打包，然后可以通过>箭头重复调用打包封装好的样式
 </p>
 <pre>
+    <code>
 /*编译之前*/
 
 //定义命名空间与打包
@@ -340,20 +304,21 @@
   background-color: aqua;
   font-size: 1rem;//根据编译结果，我们会看到bgColor并没有被编译到css样式表中，而是直接将内部定义好的样式复制过来了
 }
-
+</code>
 </pre>
 <div class="box box-4">
     <div class="box-item">
         <span>demo4</span>
     </div>
 </div>
-<h2><a href="#Less变量范围" name="Less变量范围" >Less 变量范围</a></h2>
+<h2><a href="#Less变量范围" name="Less变量范围">Less 变量范围</a></h2>
 <p>
     1:本地作用域定义的变量，如果变量名与父作用域的变量名一样，此时，本地变量会覆盖父类变量<br/>
     2:如果本地作用域没有定义变量，而父作用域定义了变量，本地会自动去父作用域查找变量并使用
 
 </p>
 <pre>
+    <code>
 /*编译之前*/
 .box{
   .box-item{
@@ -390,23 +355,25 @@
   width: 100px;
   height: 100px;
 }
+        </code>
 </pre>
 <div class="box box-5">
     <div class="box-item">
         <span>demo5</span>
     </div>
 </div>
-<h2><a href="#Less注释" name="Less注释" >Less 注释</a></h2>
+<h2><a href="#Less注释" name="Less注释">Less 注释</a></h2>
 <p>
     Less 支持两种类型的注释：多行注释和单行注释。<br/>
     当编译LESS代码时，单行注释不会显示在CSS文件中,而多行注释可以显示在CSS文件中
 </p>
 
-<h2><a href="#Less导入" name="Less导入" >Less 导入</a></h2>
+<h2><a href="#Less导入" name="Less导入">Less 导入</a></h2>
 <p>
     通过@import("文件路径")导入其他Less文件内容
 </p>
 <pre>
+    <code>
 /*编译之前*/
 //demo6_1.less
 .box{
@@ -435,34 +402,43 @@
 .box-6 .box-item span {
   color: red;
 }
-
+</code>
 </pre>
 <div class="box box-6">
     <div class="box-item">
         <span>demo6</span>
     </div>
 </div>
-<h2><a href="#Less变量" name="Less变量" >Less 变量</a></h2>
-<p>
-    1：如果某些值被多次重复使用，可以使用变量来避免<br/>
-    2：使用 @ 符号定义变量，变量分配使用冒号(:)完成<br/>
-    3：格式为“@变量名：变量值”<br/>
-    4：选择器插值@{selector} { background: #2ECCFA; }<br/>
-    5：URL插值@images: "http://www.w3cschool.cn";      background : url("@{images}/less/images/less_variables/birds.jpg");<br/>
-    6：import插值@path : "//www.w3cschool.cn/less";    @import "@{path}/external1.less";<br/>
-    7：属性插值：@my-property: color;                  background-@{my-property}: #81F7D8;<br/>
-    8：变量名为一个值：@col: #ca428b;    @color: "col";  background-color: @@color;  最终编译为：background-color: #ca428b;<br/>
-    9：变量延迟加载，它们尚未声明，也可以使用变量：font-size: @a;  @a: @b; @b: 25px; 最终解析为：font-size: 25px;<br/>
-</p>
-<h2><a href="#Less扩展" name="Less扩展" >Less 扩展</a></h2>
+<h2><a href="#Less变量" name="Less变量">Less 变量</a></h2>
+<pre>
+    <code>
+    1：如果某些值被多次重复使用，可以使用变量来避免
+    2：使用 @ 符号定义变量，变量分配使用冒号(:)完成
+    3：格式为“@变量名：变量值”
+    4：选择器插值：@selector:div; @{selector} { background: #2ECCFA; }
+    5：URL插值：@images: "http://www.w3cschool.cn";      background : url("@{images}/less/images/less_variables/birds.jpg");
+    6：import插值：@path : "//www.w3cschool.cn/less";    @import "@{path}/external1.less";
+    7：属性插值：@my-property: color;                  background-@{my-property}: #81F7D8;
+    8：变量名为一个值：@col: #ca428b;    @color: "col";  background-color: @@color;  最终编译为：background-color: #ca428b;
+    9：变量延迟加载，它们尚未声明，也可以使用变量：font-size: @a;  @a: @b; @b: 25px; 最终解析为：font-size: 25px;
+    10：变量值进行字符串拼接：.test(@a,@b){margin: "@{a}px @{b}px"} ;.test(10,20)；最终解析为：margin:10px 20px;
+    11：定义函数与定义css样式的区别：
+        函数    —— 1:@函数名:{} ; 2:.函数名(){} ; 3:.函数名(参数列表){}
+        css样式 —— .样式名称{}
+        区别：函数不会编译到css文件中，css样式可以编译到css样式中；
+              函数以@符号开头，或者函数名后面加上括号，或者加上参数，都会被认为是函数，所以不会编译到css文件中
+</code>
+</pre>
+<h2><a href="#Less扩展" name="Less扩展">Less 扩展</a></h2>
 <p>
     1：使用:extend 选择器在一个选择器中扩展其他选择器样式<br/>
     2：意思就是将当前的选择器，也要复制:extend后面选择器的样式<br/>
-    3：.a{font-size:16px;}  .b:extend(.a){color:red;}---编译之后----.b{color:red;} .a,.b{font-size:16px;}<br/>
+    3：.a{font-size:16px;} .b:extend(.a){color:red;}---编译之后----.b{color:red;} .a,.b{font-size:16px;}<br/>
     4：选择器A,选择器B:extend(选择器){xxx}与选择器A,选择器B{&:extend(选择器);xxx}的区别：<br/>
-       前者只扩展:冒号前面的选择器，后者会同时扩展大括号前面所有的选择器
+    前者只扩展:冒号前面的选择器，后者会同时扩展大括号前面所有的选择器
 </p>
 <pre>
+    <code>
 /*:extend()编译之前*/
 .class1 {
   font-size: 15px;
@@ -492,8 +468,10 @@
 .class4 {
   color: red;
 }
+        </code>
 </pre>
 <pre>
+    <code>
 /*&:extend()编译之前*/
 .class1 {
   font-size: 15px;
@@ -521,8 +499,140 @@
 .class6 {
   color: yellow;
 }
-
+</code>
 </pre>
+<h2><a href="#LessMixins函数" name="LessMixins函数">Less Mixins函数</a></h2>
+<h3><a href="#Mixin范围" name="Mixin范围">Mixin范围</a></h3>
+<pre>
+    <code>
+/*编译之前*/
 
+//Mixin范围
+.test-fanwei(){
+  @bgcolor:#cccccc;             //在mixin函数内定义变量
+  float:left;                   //在mixin函数内定义正常的css样式
+}
+
+.test-fanwei-diaoyong{
+  .test-fanwei();               //调用mixin函数
+  background-color: @bgcolor;   //调用mixin函数内的变量
+}
+
+/*编译之后*/
+.test-fanwei-diaoyong {
+  float: left;                  //.test-fanwei()函数内定义的css样式被复制过来了
+  background-color: #cccccc;    //@bgcolor变量的值，也成功的被复制过来了
+}
+//根据编译结果来看，在其他css作用域内调用定义的mixin函数，而mixin函数作用域内定义了变量，在调用的css作用域内也能调用
+mixin函数内定义的变量，比如@bgcolor变量；虽然它是在其他函数内定义的，只要在调用函数内，执行了mixin函数，那么同时也可以
+调用mixin函数内的定义的变量。
+
+结论：简单说就是：mixin函数内定义的变量可以被其他css样式作用域内访问到。
+        </code>
+</pre>
+<h3><a href="#Mixin返回值" name="Mixin返回值">Mixin返回值</a></h3>
+<pre>
+    <code>
+/*编译之前*/
+//Mixin返回值
+.test-fanhui(@x,@y){
+  @padding:((@x+@y)/2)px;    //在mixin函数内定义变量
+  margin: ~"@{x}px @{y}px";   //写法1   margin: 80px 120px;
+  //margin:@x+px @y+px;       //写法2   margin: 80 px 120 px;
+  //margin:@x~"px" @y~"px";   //写法3   margin: 80 px 120 px;
+
+}
+
+.test-fanhui-diaoyong{
+  .test-fanhui(80,120);         //调用mixin函数
+  padding-left:@padding;        //调用mixin函数内的变量
+}
+
+/*编译之后*/
+.test-fanhui-diaoyong {
+  margin: 80px 120px;
+  padding-left: 100 px;
+}
+通过编译结果，我们定义了一个叫做.test-fanhui(@x,@y)的mixin函数，接收2个参数，函数内部，定义了@padding变量，变量值通过
+计算的来，同时，函数内部，也定义了一个margin的css样式。
+最后，在其他作用域的css样式中，进行调用mixin函数，并且传值：test-fanhui(80,120)；该函数执行后，同时又调用了这个函数内的
+@padding变量，并且成功将变量值获取到。
+
+结论：简单的说就是mixin函数能够使用进行传递参数，同时能够将内部的变量进行计算后进行返回，只要调用者调用了mixin函数，就能
+    使用其内部定义的变量与样式。
+        </code>
+</pre>
+<h3><a href="#mixin定义在另一个mixin" name="mixin定义在另一个mixin">mixin定义在另一个mixin</a></h3>
+<pre>
+<code>
+/*编译之前*/
+//mixin定义在另一个mixin
+.test-other-mixin(@value){
+  padding:~"@{value}px";        //定义css样式
+  .test-nested-mixin(){         //内部定义mixin函数
+    font-size:~"@{value}px";    //定义内部mixin函数内的css样式
+    @borderRadis:@value;        //定义内部mixin函数内的变量
+  }
+}
+
+.test-other-mixin-diaoyong{
+  border-radius:@borderRadis;       //调用内部mixin变量
+  .test-other-mixin(20);            //调用mixin函数
+  .test-nested-mixin();             //调用mixin函数内部mixin函数
+  border-bottom-width:@borderRadis; //调用内部mixin变量
+}
+
+/*编译之后*/
+//mixin定义在另一个mixin
+.test-other-mixin-diaoyong {
+  border-radius: 20;                //开头就能访问到变量值
+  padding: 20px;
+  font-size: 20px;
+  border-bottom-width: 20;
+}
+    根据结果，我们首先定义了一个.test-other-mixin(@value)mixix函数，同时在函数内，我们定义了内部的css样式，以及，
+    内部的mixin函数，在内部mixin函数内，我们也有自己的内部样式，同时，也定义了@borderRadis，按照理论来说，
+    在调用者样式内部作用域内，应该无法调用内部的变量，但是Less的mixin可以，
+
+    通过编译之后的结果来看，虽然我们border-radius:@borderRadis；开头就使用了内部mixin的变量，都还没有调用test-other-mixin
+    函数就访问了内部mixin变量，并且也访问到了值。说明，在调用者作用域内，只要调用了mixin函数，无法代码的执行先后，都能
+    访问到mixin的函数。
+
+总结：1：mixin函数无需调用先后，调用者作用域内，都能访问到mixin函数内定义的变量，前提是，作用域内调用了mixin函数
+      2：在mixin函数内，在定义一个mixin函数，作为调用者来说，也可以类似调用变量一样，调用mixin函数内部定义的mixin函数
+</code>
+</pre>
+<h3><a href="#定义和调用范围可见性" name="定义和调用范围可见性">定义和调用范围可见性</a></h3>
+<pre>
+<code>
+/*编译之前*/
+//定义一个函数，给别人调用，但是内部需要的参数，其实是在调用者里面定义的
+@test-dingyi-varible:{
+  background-color:@caller-variable;    //该变量定义在调用者内
+  .caller-mixin();                      //该函数定义在调用者内
+}
+
+//调用者
+.test-dingyi-varible-diaoyong{
+  @caller-variable:#aa86EE;       //定义外部函数需要的变量
+  @test-dingyi-varible();         //调用外部函数
+
+  .caller-mixin(){
+    font-style: inherit;
+  }
+}
+
+/*编译之后*/
+.test-dingyi-varible-diaoyong {
+  background-color: #aa86EE;
+  font-style: inherit;
+}
+
+总结：
+1：函数是不能被编译到css文件中
+2：定义者与调用者之间的变量都可以访问，没有作用域限制，前提是，调用者调用了定义者。
+3：在调用者内，必须要使用()括号执行定义者，否则定义者无法访问调用者内定义的变量。如：@test-dingyi-varible()必须加上括号
+</code>
+</pre>
 </body>
 </html>
